Add layout and title to publication.html

--- a/publication.html
+++ b/publication.html
@@ -1,3 +1,5 @@
 ---
-Peer-reviewed publications (also available through Google Scholar)
+layout: page
+title: ""
 ---
+Peer-reviewed publications (also available through Google Scholar)
