Fix link formatting in publication.html

--- a/publication.html
+++ b/publication.html
@@ -2,4 +2,4 @@
 layout: page
 title: ""
 ---
-Peer-reviewed publications (also available through [Google Scholar](https://scholar.google.com/citations?user=JCBN3MEAAAAJ&hl=en))
+Peer-reviewed publications ([Google Scholar](https://scholar.google.com/citations?user=JCBN3MEAAAAJ&hl=en))
