Modify image and add description in research.html
Updated image source and added description for sustainable management.

--- a/research.html
+++ b/research.html
@@ -1,4 +1,4 @@
-
-src="/image/sustainable_management.png"
-
-<img src="assets/images/Climate_change.jpeg" alt="Climate change" width="600">
+<p align="center">
+  <img src="/assets/images/sustainable_management.png" width="600">
+</p>
+<p align="center"><em>Sustainable management practices in ecosystems.</em></p>
