Add research section with styling and content

--- a/research.html
+++ b/research.html
@@ -1,4 +1,58 @@
-<p align="center">
+<p align="left">
   <img src="/assets/images/sustainable_management.png" width="600">
 </p>
 <p align="center"><em>Sustainable management practices in ecosystems.</em></p>
+
+<style>
+  .research-item{
+    display:flex;
+    gap:28px;
+    align-items:flex-start;
+    margin: 28px 0 36px 0;
+  }
+  .research-item img{
+    width:320px;            /* adjust */
+    max-width:100%;
+    border-radius:18px;
+    border:1px solid rgba(255,255,255,0.15);
+  }
+  .research-item h2{
+    margin:0 0 10px 0;
+    line-height:1.15;
+  }
+  .research-item p{
+    margin:0 0 12px 0;
+  }
+  .papers{
+    margin-top:14px;
+  }
+  .papers a{
+    margin-right:10px;
+    white-space:nowrap;
+  }
+  /* mobile */
+  @media (max-width: 800px){
+    .research-item{ flex-direction:column; }
+    .research-item img{ width:100%; }
+  }
+</style>
+
+<section class="research-item">
+  <div>
+    <img src="/assets/images/sustainable_management.png" alt="Sustainable management">
+  </div>
+
+  <div>
+    <h2>Soil-microbiome-plant interactions under sustainable management</h2>
+    <p>
+      These studies aim to elucidate how sustainable management in managed ecosystems shapes the links among soil health, soil microbiomes, plant health, and environmental sustainability. In agroecosystems, we evaluate multiple sustainability-oriented practices, including organic amendments (e.g., biochar), diversified crop rotations, intercropping, cover cropping, biofertilizers (e.g., synthetic microbial communities), and organic management. Collectively, this work seeks to identify microbiome-informed strategies that enhance soil function and productivity while advancing climate-resilient agroecosystems.   
+    </p>
+
+    <div class="papers">
+      <strong>Papers:</strong>
+      <a href="https://doi.org/10.1007/s00374-025-01967-5">Netto-Ferreira et al. 2026</a>,
+      <a href="https://doi.org/10.1016/j.agee.2025.109781">Luo et al. 2025</a>,
+      <a href="https://doi.org/10.1007/s00374-023-01701-z">Erhunmwunse et al. 2023</a>
+    </div>
+  </div>
+</section>
