--- a/research.html
+++ b/research.html
@@ -3,85 +3,7 @@ layout: page
 title: Research
 permalink: /research/
 ---
-<style>
-/* ===== Research layout ===== */
-.research-item{
-  display:flex;
-  gap:28px;
-  align-items:stretch;        /* equal height columns */
-  margin: 40px 0;
-}
-
-.research-image{
-  flex:0 0 260px;             /* image column width */
-  display:flex;
-}
-
-.research-image img{
-  width:100%;
-  height:100%;                /* match text height */
-  object-fit:cover;           /* fill nicely */
-  border-radius:14px;
-}
-
-.research-text{
-  flex:1;
-}
-
-.research-text h2{
-  margin-top:0;
-  margin-bottom:10px;
-  line-height:1.2;
-}
-
-.research-text p{
-  margin:0 0 12px 0;
-}
-
-/* ===== Papers & funding ===== */
-.papers{
-  margin-top:14px;
-}
-
-.paper-list a{
-  text-decoration:none;
-}
-
-.paper-list a::after{
-  content:", ";
-}
-
-.paper-list a:last-child::after{
-  content:"";
-}
-
-.funding{
-  margin-top:6px;
-  color:#444;
-  font-size:0.95em;
-}
-
-/* ===== Mobile ===== */
-@media (max-width: 800px){
-  .research-item{
-    flex-direction:column;
-  }
-  .research-image{
-    flex:unset;
-  }
-  .research-image img{
-    height:auto;
-  }
-}
-</style>
-
-
-<!-- ===== Research block 1 ===== -->
 <section class="research-item">
-
-  <div class="research-image">
-    <img src="/assets/images/soil-microbe-plant.png" alt="Sustainable management">
-  </div>
 
   <div class="research-text">
     <h2>Soil–microbiome–plant-environment interactions under sustainable management</h2>
@@ -89,14 +11,15 @@ permalink: /research/
     <p>
       These studies aim to elucidate how sustainable management in managed ecosystems shapes the links among soil health,
       soil microbiomes, plant health, and environmental sustainability. In agroecosystems, we evaluate sustainability-oriented
-      practices including soil amendments (e.g., biochar), crop diversification, biofertilizers, crop-livestock integration,
-      and organic management.
-    </p>
-
-    <p>
-      Collectively, this work identifies microbiome-informed strategies that enhance soil function and productivity while
+      practices including soil amendments (e.g., biochar), crop diversification, biofertilizers, crop–livestock integration,
+      and organic management. Collectively, this work identifies microbiome-informed strategies that enhance soil function and productivity while
       advancing climate-resilient agroecosystems.
     </p>
+
+    <!-- image now under description -->
+    <div class="research-figure">
+      <img src="/assets/images/soil-microbe-plant.png" alt="Sustainable management">
+    </div>
 
     <div class="papers">
       <strong>Papers:</strong>
