--- a/people.html
+++ b/people.html
@@ -3,18 +3,18 @@ layout: page
 ---
 <section class="person">
   <div class="person-photo">
-    <img src="/assets/images/kz.jpg" alt="Kaile Zhang">
+    <img src="/assets/images/KZ.jpg" alt="Kaile Zhang">
   </div>
 
   <div class="person-info">
     <h2>Kaile Zhang</h2>
     <p><strong>Assistant Professor</strong><br>
-    <h2>Principal Investigator</h2>
-    <h2>Office phone: 573-681-5111</h2>
+    <p><strong>Principal Investigator</strong><br>
+    <p><strong>Office phone: 573-681-5111</strong><br>
 
     <p>
-    📧 <a href="ZhangK@lincolnu.edu">your@email.edu</a><br>
-    🔗 <a href="https://scholar.google.com/citations?user=JCBN3MEAAAAJ&hl=en/">Google Scholar</a><br>
+    📧 <a href="ZhangK@lincolnu.edu">Email</a>
+    🔗 <a href="https://scholar.google.com/citations?user=JCBN3MEAAAAJ&hl=en/">Google Scholar</a>
     🔗 <a href="https://github.com/KaileZhang-lab">GitHub</a>
     🔗 <a href="https://www.researchgate.net/profile/Kaile-Zhang?ev=hdr_xprf">ResearchGate</a>
     </p>
