--- a/research.html
+++ b/research.html
@@ -2,9 +2,10 @@
 layout: page
 permalink: /research/
 ---
-<section class="research-item">
 
-  <div class="research-text" id ="Soil–microbiome–plant-environment interactions">
+<section class="research-item" id="sustainable-management">
+
+  <div class="research-text">
     <h2>Soil–microbiome–plant-environment interactions under sustainable management</h2>
 
     <p>
@@ -15,7 +16,6 @@ permalink: /research/
       advancing climate-resilient agroecosystems.
     </p>
 
-    <!-- image now under description -->
     <div class="research-figure">
       <img src="/assets/images/soil-microbe-plant.png" alt="Sustainable management">
     </div>
@@ -48,7 +48,8 @@ permalink: /research/
   </div>
 </section>
 
-<section class="research-item" id="Ecosystem functioning under environmental changes">
+
+<section class="research-item" id="environmental-change">
 
   <div class="research-text">
     <h2>Impacts of environmental changes on terrestrial ecosystems</h2>
@@ -60,7 +61,6 @@ permalink: /research/
       identify microbial traits that underpin resilience, maintain nutrient cycling, and buffer plants against climate-driven stress.
     </p>
 
-    <!-- image now under description -->
     <div class="research-figure">
       <img src="/assets/images/climate_change.png" alt="Climate change effects on soil microbiomes">
     </div>
@@ -77,7 +77,7 @@ permalink: /research/
 
     <div class="funding">
       <strong>Funding:</strong>
-      USDA-CRIS (6070-11000-009-00D ), NSF-IOS-PBI (2029168) 
+      USDA-CRIS (6070-11000-009-00D), NSF-IOS-PBI (2029168)
     </div>
 
   </div>
