--- a/research.html
+++ b/research.html
@@ -2,131 +2,41 @@
 layout: page
 permalink: /research/
 ---
-<nav class="research-toc">
-  <strong>Projects:</strong>
-  <a href="#sustainable-management">Sustainable management</a>
-  <span> · </span>
-  <a href="#environmental-change">Environmental change</a>
-</nav>
+---
+layout: page
+title: Research
+permalink: /research/
+---
 
-<section class="research-item" id="sustainable-management">
+<section class="research-item">
 
-  <div class="research-text">
-    <h2>Soil–microbiome–plant-environment interactions under sustainable management</h2>
+  <h2>
+    <a href="/research/sustainable-management/">
+      Soil–microbiome–plant–environment interactions under sustainable management
+    </a>
+  </h2>
 
-    <p>
-      These studies aim to elucidate how sustainable management in managed ecosystems shapes the links among soil health,
-      soil microbiomes, plant health, and environmental sustainability. In agroecosystems, we evaluate sustainability-oriented
-      practices including soil amendments (e.g., biochar), crop diversification, biofertilizers, crop–livestock integration,
-      and organic management. Collectively, this work identifies microbiome-informed strategies that enhance soil function and productivity while
-      advancing climate-resilient agroecosystems.
-    </p>
+  <p>
+    <a class="research-readmore" href="/research/sustainable-management/">
+      Read more →
+    </a>
+  </p>
 
-    <div class="research-figure">
-      <img src="/assets/images/soil-microbe-plant.png" alt="Sustainable management">
-    </div>
-
-    <div class="papers">
-      <strong>Papers:</strong>
-      <span class="paper-list">
-        <a href="https://doi.org/10.1007/s00374-025-01967-5">Netto-Ferreira et al. 2026</a>
-        <a href="https://doi.org/10.1016/j.agee.2025.109781">Luo et al. 2025</a>
-        <a href="https://doi.org/10.1007/s00374-023-01701-z">Erhunmwunse et al. 2023</a>
-        <a href="https://doi.org/10.1016/j.scitotenv.2022.159204">Shen et al. 2023</a>
-        <a href="https://doi.org/10.1007/s00374-022-01675-4">Zhang et al. 2022</a>
-        <a href="https://doi.org/10.1007/s00374-022-01626-z">Zhang et al. 2022</a>
-        <a href="https://doi.org/10.1016/j.apsoil.2021.104254">Zhang et al. 2022</a>
-        <a href="https://doi.org/10.1007/s00374-021-01558-0">Shen et al. 2021</a>
-        <a href="https://doi.org/10.1016/j.soilbio.2021.108219">Zhang et al. 2021</a>
-        <a href="https://doi.org/10.1007/s00374-021-01546-4">Shen et al. 2021</a>
-        <a href="https://doi.org/10.3390/agronomy10050754">Zhang et al. 2020</a>
-        <a href="https://doi.org/10.1016/j.ejsobi.2020.103151">Zhang et al. 2020</a>
-        <a href="https://doi.org/10.1007/s00374-016-1154-0">Zhang et al. 2017</a>
-      </span>
-    </div>
-
-    <div class="funding">
-      <strong>Funding:</strong>
-      USDA-NIFA (2024-67019-42344, co-PI), Florida Department of Agriculture and Consumer Service (30040, co-PI),
-      SARE Graduate Grant Award (GS20-224, PI)
-    </div>
-
-  </div>
 </section>
 
 
-<section class="research-item" id="environmental-change">
+<section class="research-item">
 
-  <div class="research-text">
-    <h2>Impacts of environmental changes on terrestrial ecosystems</h2>
+  <h2>
+    <a href="/research/environmental-change/">
+      Impacts of environmental changes on terrestrial ecosystems
+    </a>
+  </h2>
 
-    <p>
-      We investigate how climate-driven stressors, including warming, elevated CO<sub>2</sub>, O<sub>3</sub>, altered soil moisture regimes, and
-      shifting nutrient availability, reshape soil microbial communities and their functional capacity across ecosystems.
-      By integrating field observations and manipulative experiments with multi-omics and biogeochemical measurements, we
-      identify microbial traits that underpin resilience, maintain nutrient cycling, and buffer plants against climate-driven stress.
-    </p>
+  <p>
+    <a class="research-readmore" href="/research/environmental-change/">
+      Read more →
+    </a>
+  </p>
 
-    <div class="research-figure">
-      <img src="/assets/images/climate_change.png" alt="Climate change effects on soil microbiomes">
-    </div>
-
-    <div class="papers">
-      <strong>Papers:</strong>
-      <span class="paper-list">
-        <a href="https://doi.org/10.1111/gcb.17215">Zhang et al. 2024</a>
-        <a href="https://doi.org/10.1016/j.scitotenv.2022.161008">Zhang et al. 2023</a>
-        <a href="https://doi.org/10.1016/j.scitotenv.2021.149481">Zhang et al. 2021</a>
-        <a href="https://doi.org/10.1007/s00374-018-1308-3">Shen et al. 2018</a>
-      </span>
-    </div>
-
-    <div class="funding">
-      <strong>Funding:</strong>
-      USDA-CRIS (6070-11000-009-00D, participant), NSF-IOS-PBI (2029168, participant)
-    </div>
-
-  </div>
 </section>
-
-<style>
-.research-toc{
-  margin: 10px 0 28px 0;
-  font-size: 1.05em;
-}
-.research-toc a{
-  text-decoration: none;
-  margin: 0 4px;
-}
-.research-toc a:hover{
-  text-decoration: underline;
-}
-
-.research-item{
-  margin-bottom: 60px;
-}
-
-.research-figure{
-  margin: 18px 0 10px 0;
-  text-align: center;
-}
-
-.research-figure img{
-  max-width: 720px;
-  width: 100%;
-  height: auto;
-  border-radius: 12px;
-}
-
-.papers{
-  margin-top: 8px;
-}
-
-.paper-list a{
-  margin-right: 10px;
-}
-
-.funding{
-  margin-top: 6px;
-}
-</style>
