--- a/research-forest.html
+++ b/research-forest.html
@@ -1,1 +1,45 @@
+---
+layout: page
+permalink: /research/forest-ecosystems/
+---
 
+<section class="research-item" id="forest-ecosystems">
+
+  <div class="research-text">
+    <h2>Forest ecosystem functions and health</h2>
+
+    <p>
+      This project investigates how free-living microbial communities interact with ectomycorrhizal fungi (EMF) 
+      and their host plants to regulate soil biogeochemical cycling, EMF-mediated nutrient acquisition, and plant
+      tolerance to abiotic (e.g., heavy metals and urbanization) and biotic stressors (e.g., invasive species). 
+      Using the Suillus–Pinus symbiosis as a tractable model, we integrate multi-omics with advanced chemical 
+      imaging (e.g., X-ray fluorescence imaging and NanoSIMS imaging) to resolve the mechanistic links among 
+      microbial interactions, nutrient transfer, and carbon dynamics at the soil-root interface. Ultimately, 
+      this work delivers foundational insights into EMF-centered plant-microbiome partnerships that shape ecosystem 
+      carbon and nutrient cycling, soil and plant health, and ecosystem stability, informing strategies to sustain 
+      resilient terrestrial ecosystems under accelerating environmental change.
+    </p>
+
+    <div class="research-figure">
+      <img src="/assets/images/emf.png" alt="Forest ecosystems">
+    </div>
+
+    <div class="papers">
+      <strong>Papers:</strong>
+      <span class="paper-list">
+        <a href="https://doi.org/10.1111/nph.20394">Wang et al. 2025</a>
+        <a href="https://doi.org/10.1111/nph.19700">Lofgren et al. 2024</a>
+        <a href="https://doi.org/10.1111/nph.19449">Zhang et al. 2024</a>
+        <a href="https://doi.org/10.1016/j.scitotenv.2023.165840">Luo et al. 2023</a>
+        <a href="https://doi.org/10.1016/j.scitotenv.2021.149481">Zhang et al. 2021</a>
+      </span>
+    </div>
+
+    <div class="funding">
+      <strong>Funding:</strong>
+      DOE-BER-Systems Bio (DE-SC0012704;  participant), DOE-BER-Systems Bio (DE-FOA-0002059; participant) NSF-IOS-PBI (2029168; participant),
+      BNL-NSLS-II (309128, 310375, and 310014; co-PI)
+    </div>
+
+  </div>
+</section>
