--- a/research.html
+++ b/research.html
@@ -33,3 +33,18 @@ permalink: /research/
   </p>
 
 </section>
+
+<section class="research-item">
+
+  <h2>
+      Forest ecosystem functions and health
+    </a>
+  </h2>
+
+  <p>
+    <a class="research-readmore" href="/research/forest-ecosystems/">
+      Read more →
+    </a>
+  </p>
+
+</section>
