--- a/research-forest.html
+++ b/research-forest.html
@@ -32,6 +32,7 @@ permalink: /research/forest-ecosystems/
         <a href="https://doi.org/10.1111/nph.19449">Zhang et al. 2024</a>
         <a href="https://doi.org/10.1016/j.scitotenv.2023.165840">Luo et al. 2023</a>
         <a href="https://doi.org/10.1016/j.scitotenv.2021.149481">Zhang et al. 2021</a>
+        <a href="https://doi.org/10.1007/s11368-016-1483-5">Luo et al. 2016</a>
       </span>
     </div>
 
