--- a/research-sustainable.html
+++ b/research-sustainable.html
@@ -37,6 +37,7 @@ permalink: /research/sustainable-management/
         <a href="https://doi.org/10.3390/agronomy10050754">Zhang et al. 2020</a>
         <a href="https://doi.org/10.1016/j.ejsobi.2020.103151">Zhang et al. 2020</a>
         <a href="https://doi.org/10.1007/s00374-016-1154-0">Zhang et al. 2017</a>
+        <a href="https://doi.org/10.1016/j.soilbio.2016.12.006">Luo et al. 2017</a>
       </span>
     </div>
 
