--- a/research-environment.html
+++ b/research-environment.html
@@ -31,7 +31,7 @@ permalink: /research/environmental-change/
 
     <div class="funding">
       <strong>Funding:</strong>
-      USDA-CRIS (6070-11000-009-00D, participant), NSF-IOS-PBI (2029168, participant)
+      USDA-CRIS (6070-11000-009-00D; participant), NSF-IOS-PBI (2029168; participant)
     </div>
 
   </div>
